:lipstick: Updates min footer-height, to prevent scrollbar visible

--- a/src/styles/color-themes.scss
+++ b/src/styles/color-themes.scss
@@ -354,6 +354,7 @@ html[data-theme='minimal-light'], html[data-theme='minimal-dark'], html[data-the
 html[data-theme='material'], html[data-theme='material-dark'] {
   --font-body: 'Raleway', serif;
   --font-headings: 'Francois One', serif;
+  --footer-height: 140px;
   --curve-factor: 4px;
   --curve-factor-navbar: 8px;
   --about-page-background: var(--background);
